--- a/app/views/exam/_inactive_batches.html.haml
+++ b/app/views/exam/_inactive_batches.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 .label-field-pair
   %label{:for => "student_course"}
     = t('select_a_batch')
@@ -25,10 +26,6 @@
     = select :course, :batch_id,                                                         |
       @batches.map {|b| [b.name, b.id]},                                                 |
       {:prompt => "#{t('select_a_batch')}"},                                             |
-      {:onChange => "#{remote_function(:url => {:action => "list_inactive_exam_groups"}, |
-      :with => "'batch_id='+ value",                                                     |
-      :before => "Element.show('loader1')",                                              |
-      :success => "Element.hide('loader1')"                                              |
-      )}"}                                                                               |
+      {:onChange => "onChangeRequest(this, '#{url_for(action: :list_inactive_exam_groups, batch_id: 'paramid')}')"}
 #inactive_exam_groups
 .extender
