--- a/app/views/exam/create_exam.html.haml
+++ b/app/views/exam/create_exam.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('exams_text')
@@ -40,10 +41,6 @@
         = select :courses, :name,                                                                     |
           @course.map {|b| [b.full_name, b.id]},                                                      |
           {:prompt => "#{t('select_a_course')}"},                                                     |
-          {:onChange => "#{remote_function(:url => {:action => "update_batch", course_name: "value"}, |
-          :with => "'course_name='+ value",                                                           |
-          :before => "Element.show('loader')",                                                        |
-          :success => "Element.hide('loader')"                                                        |
-          )}"}                                                                                        |
+          {:onChange => "onChangeRequest(this, '#{url_for(action: :update_batch, course_name: 'paramid')}')"}
     #update_batch
     .extender
