--- a/app/views/exam/exam_wise_report.html.haml
+++ b/app/views/exam/exam_wise_report.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('exams_text')
@@ -36,12 +37,8 @@
       .text-input-bg
         = select :exam_report, :batch_id,                                                          |
           @batches.map {|b| [b.full_name, b.id]},                                                  |
-          { prompt: t('select_a_batch')},                                                          |
-          { onChange: "#{remote_function(url: list_exam_types_exam_index_path(batch_id: "value") , |
-          with: "'batch_id='+value",                                                               |
-          before: "Element.show('loader')",                                                        |
-          success: "Element.hide('loader')"                                                        |
-          )}"}                                                                                     |
+          { :prompt => t('select_a_batch')},                                                          |
+          {:onChange => "onChangeRequest(this, '#{url_for(action: :list_exam_types, batch_id: 'paramid')}')"}
       #exam-group-select.text-input-bg
         = select :exam_report, :exam_group_id, @exam_groups.map{|exam| [exam.name,exam.id]},:prompt=> "#{t('select_exam_group')}"
       = image_tag("loader.gif",     |
