--- a/app/views/exam/grouped_exam_report.html.haml
+++ b/app/views/exam/grouped_exam_report.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('exams_text')
@@ -41,10 +42,8 @@
         .text-input-bg
           = select :exam_report, :batch_id,                                                          |
             Batch.active.map {|b| [b.full_name, b.id]},                                              |
-            {prompt: t('select_a_batch')},                                                           |
-            {onChange: "#{remote_function(url: final_report_type_exam_index_path(batch_id: "value"), |
-            with: "'batch_id='+value"                                                                |
-            )}"}                                                                                     |
+            {:prompt => t('select_a_batch')},                                                           |
+            {:onChange => "onChangeRequest(this, '#{url_for(action: :final_report_type, batch_id: 'paramid')}')"}
       #report_type
       = submit_tag "", :value => "► #{t('view')}", :class => "submit_button"
       - #  x.submit 'View'
