--- a/app/views/exam/previous_batch_exams.html.haml
+++ b/app/views/exam/previous_batch_exams.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("examination/show_exam.png")
   %h1= t('exams_text')
@@ -41,10 +42,6 @@
         = select :course, :course_id,                                                                        |
           Course.active.map {|b| [b.full_name, b.id]},                                                       |
           {:prompt => "#{t('select_a_course')}"},                                                            |
-          {:onChange => "#{remote_function(:url => {:action => "list_inactive_batches", course_id: "value"}, |
-          :with => "'course_id='+ value",                                                                    |
-          :before => "Element.show('loader')",                                                               |
-          :success => "Element.hide('loader')"                                                               |
-          )}"}                                                                                               |
+          {:onChange => "onChangeRequest(this, '#{url_for(action: :list_inactive_batches, course_id: 'paramid')}')"}
     #inactive_batches
     .extender
