--- a/app/views/exam_reports/archived_exam_wise_report.html.haml
+++ b/app/views/exam_reports/archived_exam_wise_report.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   %img{:alt => "Exam", :src => "examination/show_exam.png"}/
   %h1= t('exam_reports_text')
@@ -40,12 +41,8 @@
         .text-input-bg
           = select :exam_report, :course_id,                                                                    |
             @courses.map {|c| [c.full_name, c.id]},                                                             |
-            {prompt: t('select_a_course')},                                                                     |
-            {onChange: "#{remote_function(url: list_inactivated_batches_exam_reports_path(course_id: "value") , |
-            with: "'course_id='+value",                                                                         |
-            before: "Element.show('loader')",                                                                   |
-            success: "Element.hide('loader')"                                                                   |
-            )}"}                                                                                                |
+            {:prompt => t('select_a_course')},                                                                     |
+            {:onChange => "onChangeRequest(this, '#{url_for(action: :list_inactivated_batches, course_id: 'paramid')}')"}
       .label-field-pair
         %label
           = t('select_a_batch')
@@ -54,9 +51,8 @@
           #inactive_batches
             = select :exam_report, :batch_id,                                                                                           |
               @batches.map {|b| [b.full_name, b.id]},                                                                                   |
-              {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"}, |
-              :with => "'batch_id='+value"                                                                                              |
-              )}"}                                                                                                                      |
+              {:prompt => "#{t('select_a_batch')}"},
+              {:onChange => "onChangeRequest(this, '#{url_for(action: :final_archived_report_type, batch_id: 'paramid')}')"}
       #archived_report_type
       = submit_tag "", :value => "►#{t('view')}", :class => "submit_button"
     .extender
