--- a/app/views/student_attendance/student.html.haml
+++ b/app/views/student_attendance/student.html.haml
@@ -16,6 +16,8 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= csrf_meta_tag
 #content-header
   = image_tag("attendence/attendence.png")
   %h1= t('attendance')
@@ -25,7 +27,7 @@
 #page-yield
   #box
     #error-container
-    = form_for :advance_search, remote: true do |f|
+    = form_for(:advance_search, remote: true, :url => {:id => @student.id}) do |f|
       .label-field-pair
         %label{:for => "student"}= t('student_name')
         .text-input-bg
@@ -49,11 +51,7 @@
           = f.select :mode,                                                 |
             [["#{t('monthly')}","Monthly"], ["#{t('overall')}","Overall"]], |
             {:prompt => "#{t('select_mode')}"},                             |
-            {:onchange => "#{remote_function(                               |
-            :url => { :action => 'month' },                                 |
-            :with => "'mode='+value+'&id=#{@student.id}'",                  |
-            :before => "Element.show('loader')",                            |
-            :success => "Element.hide('loader')"  )}"}                      |
+            {:onchange => "onchangeRequest(this, '#{url_for(action: :month, mode: 'paramid', id: @student.id)}')"}
       #month
       = submit_tag "", :value => "► #{t('ok')}", :class => "submit_button"
     #report
