--- a/app/views/students/guardians.haml
+++ b/app/views/students/guardians.haml
@@ -24,9 +24,9 @@
     = back_button
 #inner-tab-menu
   %ul
-    %li= link_to "#{t('student_profile')}", :controller => 'student', :action => 'profile', :id => @student.id
+    %li= link_to "#{t('student_profile')}", :controller => 'students', :action => 'profile', :id => @student.id
     - if permitted_to? :add_guardian, :student
-      %li= link_to "#{t('add_guardian')}", :controller => 'student', :action => 'add_guardian', :id => @student.id
+      %li= link_to "#{t('add_guardian')}", :controller => 'students', :action => 'add_guardian', :id => @student.id
 #page-yield
   - unless flash[:notice].nil?
     %p.flash-msg
@@ -103,11 +103,11 @@
         - if permitted_to? :edit_guardian,:student
           .parent-edit-button
             = link_to "► #{t('edit_text')}",                                                              |
-              { :controller => 'student', :action => 'edit_guardian', :id => p.id}, :class=>"user_button" |
+              { :controller => 'students', :action => 'edit_guardian', :id => p.id}, :class=>"user_button" |
         - if permitted_to? :del_guardian,:student
           - if @student.guardians.size > 1
             .parent-edit-button
               = link_to "► #{t('delete_text')}",                                       |
-                {:controller => 'student', :action => 'del_guardian', :id => p.id },   |
+                {:controller => 'students', :action => 'del_guardian', :id => p.id },   |
                 {:confirm => "#{t('are_you_completely_sure')}", :class=>"user_button"} |
       .extender
